--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "babel-preset-stage-1": "^6.13.0",
+    "enzyme": "^2.4.1",
+    "react-addons-test-utils": "^15.3.1",
     "react-scripts": "^0.4.0",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
