--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://passaporte.redesustentabilidade.org.br",
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
   }
