--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "redux-logger": "^2.6.1"
   },
   "dependencies": {
+    "admin-on-rest": "0.3.1",
     "humps": "^1.1.0",
     "material-ui": "^0.15.4",
     "normalizr": "^2.2.1",
@@ -23,6 +24,7 @@
     "react-router-redux": "^4.0.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
+    "redux-auth-wrapper": "0.8.0",
     "redux-form": "^6.0.2",
     "redux-thunk": "^2.1.0"
   },
@@ -32,7 +34,6 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://passaporte.redesustentabilidade.org.br",
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
   }
